21. Manipulating with basic tensor operations

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOA1jJ+Hu1b/5ShFLnD7/jD"
+      "authorship_tag": "ABX9TyPZUGK5vVl774a/HV92xXhz"
     },
     "kernelspec": {
       "name": "python3",
@@ -1096,11 +1096,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8brDTl9W6aLB",
-        "outputId": "c2b45fd7-a075-4a45-9e7b-039de3e6f390",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8brDTl9W6aLB",
+        "outputId": "c2b45fd7-a075-4a45-9e7b-039de3e6f390"
       },
       "source": [
         "some_list = [1, 2, 3, 4]\n",
@@ -1125,11 +1125,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1aNxzyOH6Hjv",
-        "outputId": "9c55016b-18c6-40b0-885f-cbb4df64cb9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1aNxzyOH6Hjv",
+        "outputId": "9c55016b-18c6-40b0-885f-cbb4df64cb9e"
       },
       "source": [
         "# Get the first 2 elements of each dimension\n",
@@ -1166,11 +1166,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AHcFAmHh7Jjd",
-        "outputId": "e81359c5-5b7d-442d-bb39-90cedae6cdd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AHcFAmHh7Jjd",
+        "outputId": "e81359c5-5b7d-442d-bb39-90cedae6cdd7"
       },
       "source": [
         "some_list[:1]"
@@ -1194,11 +1194,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yXacuHtp7hWa",
-        "outputId": "eb9ffba6-5d0d-40d9-862d-6e156da66f6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yXacuHtp7hWa",
+        "outputId": "eb9ffba6-5d0d-40d9-862d-6e156da66f6f"
       },
       "source": [
         "rank_4_tensor.shape"
@@ -1222,11 +1222,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c6bhxkZ16q8g",
-        "outputId": "a679d47e-da37-4c28-e8bc-12431ab71cbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c6bhxkZ16q8g",
+        "outputId": "a679d47e-da37-4c28-e8bc-12431ab71cbd"
       },
       "source": [
         "# Get the first element from each dimension from each index except for the final one\n",
@@ -1251,11 +1251,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RLKQcCE77vD6",
-        "outputId": "ea46ce19-bf5c-4227-e71e-8485e17a71aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RLKQcCE77vD6",
+        "outputId": "ea46ce19-bf5c-4227-e71e-8485e17a71aa"
       },
       "source": [
         "#Create a rank 2 tensor(2 dimensions)\n",
@@ -1282,11 +1282,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "117xdzypOS59",
-        "outputId": "223213d6-43a2-48e1-f6f0-1a4ff532030a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "117xdzypOS59",
+        "outputId": "223213d6-43a2-48e1-f6f0-1a4ff532030a"
       },
       "source": [
         "some_list[-1]"
@@ -1310,11 +1310,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zyXiXqRoJXnE",
-        "outputId": "a81642e0-b5b2-4a5b-ae5d-114e7c85a5f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zyXiXqRoJXnE",
+        "outputId": "a81642e0-b5b2-4a5b-ae5d-114e7c85a5f7"
       },
       "source": [
         "# Get last item of each of our rank 2 tensor\n",
@@ -1339,11 +1339,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aJjInnmaOeQN",
-        "outputId": "946102ae-cb90-4a7b-c1a5-4dcab46afc95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aJjInnmaOeQN",
+        "outputId": "946102ae-cb90-4a7b-c1a5-4dcab46afc95"
       },
       "source": [
         "# Add in extra dimension to our rank 2 tensor\n",
@@ -1374,11 +1374,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mepVpDYlO7dE",
-        "outputId": "0855dd27-6d3f-4f0b-ea59-d42c11636e26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mepVpDYlO7dE",
+        "outputId": "0855dd27-6d3f-4f0b-ea59-d42c11636e26"
       },
       "source": [
         "#Alternative to tf.newaxis\n",
@@ -1408,11 +1408,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oFOTfSi6PpVf",
-        "outputId": "2ca2afc5-06fa-4147-cf9d-bc401669bf5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oFOTfSi6PpVf",
+        "outputId": "2ca2afc5-06fa-4147-cf9d-bc401669bf5b"
       },
       "source": [
         "#Alternative to tf.newaxis\n",
@@ -1442,7 +1442,203 @@
         "id": "9BjoyP4yP7x1"
       },
       "source": [
-        "### Manipulating tensors(tensor operations)"
+        "### Manipulating tensors(tensor operations)\n",
+        "\n",
+        "**Basic Operations**\n",
+        "\n",
+        "`+`, `-`, `*`, `/`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iv1xT4F4QHGI",
+        "outputId": "b203767a-3fe4-4c73-a7ea-07f46845ed46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# You can add values to a tensor using the addition operator\n",
+        "\n",
+        "tensor = tf.constant([\n",
+        "                      [10, 4],\n",
+        "                      [3, 4]\n",
+        "])\n",
+        "\n",
+        "tensor + 10"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[20, 14],\n",
+              "       [13, 14]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fDkx92tpRTKu",
+        "outputId": "10eb52c1-4cb9-401f-b277-1fe830beb2a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Original tensor is unchanged\n",
+        "tensor"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[10,  4],\n",
+              "       [ 3,  4]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eZ80bnXBRatI",
+        "outputId": "559d74b5-98f3-4fcb-9967-4408ec11d117",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Multiplication also works\n",
+        "tensor * 10"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[20,  8],\n",
+              "       [ 6,  8]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z7xD2qMiRloh",
+        "outputId": "8ba9e841-7faa-449f-fa8b-48f8829882a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Substraction if you want\n",
+        "tensor - 10"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[ 0, -6],\n",
+              "       [-7, -6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-_T4pCjxRqyE",
+        "outputId": "77126407-40b2-41dc-ea71-61217e33297a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# We can use tensorflow built-in function too\n",
+        "tf.multiply(tensor, 10)"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[100,  40],\n",
+              "       [ 30,  40]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kh84QiuFR1ZQ",
+        "outputId": "8501542c-f22f-4a99-a375-09bff491b209",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# We can use tensorflow built-in function too\n",
+        "tf.divide(tensor, 10)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=float64, numpy=\n",
+              "array([[1. , 0.4],\n",
+              "       [0.3, 0.4]])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
       ]
     }
   ]
