22. Matrix Multiplications - Part 1

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZUGK5vVl774a/HV92xXhz"
+      "authorship_tag": "ABX9TyMjSsbztHvFGKAbCaMgJxty"
     },
     "kernelspec": {
       "name": "python3",
@@ -1452,11 +1452,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Iv1xT4F4QHGI",
-        "outputId": "b203767a-3fe4-4c73-a7ea-07f46845ed46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Iv1xT4F4QHGI",
+        "outputId": "b203767a-3fe4-4c73-a7ea-07f46845ed46"
       },
       "source": [
         "# You can add values to a tensor using the addition operator\n",
@@ -1489,11 +1489,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fDkx92tpRTKu",
-        "outputId": "10eb52c1-4cb9-401f-b277-1fe830beb2a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fDkx92tpRTKu",
+        "outputId": "10eb52c1-4cb9-401f-b277-1fe830beb2a4"
       },
       "source": [
         "# Original tensor is unchanged\n",
@@ -1520,11 +1520,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eZ80bnXBRatI",
-        "outputId": "559d74b5-98f3-4fcb-9967-4408ec11d117",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eZ80bnXBRatI",
+        "outputId": "559d74b5-98f3-4fcb-9967-4408ec11d117"
       },
       "source": [
         "# Multiplication also works\n",
@@ -1551,11 +1551,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z7xD2qMiRloh",
-        "outputId": "8ba9e841-7faa-449f-fa8b-48f8829882a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z7xD2qMiRloh",
+        "outputId": "8ba9e841-7faa-449f-fa8b-48f8829882a1"
       },
       "source": [
         "# Substraction if you want\n",
@@ -1582,11 +1582,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-_T4pCjxRqyE",
-        "outputId": "77126407-40b2-41dc-ea71-61217e33297a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-_T4pCjxRqyE",
+        "outputId": "77126407-40b2-41dc-ea71-61217e33297a"
       },
       "source": [
         "# We can use tensorflow built-in function too\n",
@@ -1613,11 +1613,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kh84QiuFR1ZQ",
-        "outputId": "8501542c-f22f-4a99-a375-09bff491b209",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kh84QiuFR1ZQ",
+        "outputId": "8501542c-f22f-4a99-a375-09bff491b209"
       },
       "source": [
         "# We can use tensorflow built-in function too\n",
@@ -1639,6 +1639,223 @@
           },
           "execution_count": 68
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ue2HKFTRSOSi"
+      },
+      "source": [
+        "###*** Matrix manipulation***\n",
+        "\n",
+        "In ML, matrix manipulation is one of the most common tensor operations.\n",
+        "\n",
+        "There are two rules our tensors(or matrices) need to fulfill if we're going to matrix multiply them :\n",
+        " 1. The inner dimension must match\n",
+        " 2. The resulting matrix has the shape of inner dimensions.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eGFl49NsT5-L",
+        "outputId": "ef858718-5009-451c-d86e-7336ff513f58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Matrix multiplication  in tensorflow\n",
+        "print(tensor)\n",
+        "tf.matmul(tensor, tensor)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(\n",
+            "[[10  4]\n",
+            " [ 3  4]], shape=(2, 2), dtype=int32)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[112,  56],\n",
+              "       [ 42,  28]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GOSLFkBhb0PT",
+        "outputId": "78096b95-fbbb-4ff6-9199-9249d33dbfd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tensor * tensor # Element wise"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[100,  16],\n",
+              "       [  9,  16]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nd6vungkcEUx",
+        "outputId": "6ccb8a86-cc7a-495c-8aeb-f5ceaaa4590a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Matrix multiplication with Python operator \"@\"\n",
+        "\n",
+        "tensor @ tensor"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[112,  56],\n",
+              "       [ 42,  28]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zHuMqEwXcNz_",
+        "outputId": "bf1b0744-48ab-42db-f926-1af133be91ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create a tensor of (3,2) tensor\n",
+        "\n",
+        "X = tf.constant([[1, 2], [3, 4], [5, 6] ])\n",
+        "\n",
+        "# Create another tensor of (3, 2) tensor\n",
+        "\n",
+        "Y = tf.constant([[7, 8], [9, 10], [11, 12] ])\n",
+        "\n",
+        "X, Y"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              " array([[1, 2],\n",
+              "        [3, 4],\n",
+              "        [5, 6]], dtype=int32)>, <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              " array([[ 7,  8],\n",
+              "        [ 9, 10],\n",
+              "        [11, 12]], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q0YMJ_kccrKb",
+        "outputId": "ebe06551-9fe9-4654-fc0d-ee7c31431224",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        }
+      },
+      "source": [
+        "#Try to matrix multiply of same shape\n",
+        "\n",
+        "tf.matmul(X, Y)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "InvalidArgumentError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-76-2832be79a0ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Try to matrix multiply of same shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/util/dispatch.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[0;34m\"\"\"Call target, and fall back on dispatchers if there is a TypeError.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m       \u001b[0;31m# Note: convert_to_eager_tensor currently raises a ValueError, not a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/math_ops.py\u001b[0m in \u001b[0;36mmatmul\u001b[0;34m(a, b, transpose_a, transpose_b, adjoint_a, adjoint_b, a_is_sparse, b_is_sparse, name)\u001b[0m\n\u001b[1;32m   3488\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3489\u001b[0m       return gen_math_ops.mat_mul(\n\u001b[0;32m-> 3490\u001b[0;31m           a, b, transpose_a=transpose_a, transpose_b=transpose_b, name=name)\n\u001b[0m\u001b[1;32m   3491\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3492\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/gen_math_ops.py\u001b[0m in \u001b[0;36mmat_mul\u001b[0;34m(a, b, transpose_a, transpose_b, name)\u001b[0m\n\u001b[1;32m   5698\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0m_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5699\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5700\u001b[0;31m       \u001b[0m_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from_not_ok_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5701\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_FallbackException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5702\u001b[0m       \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   6895\u001b[0m   \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\" name: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6896\u001b[0m   \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6897\u001b[0;31m   \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_status_to_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6898\u001b[0m   \u001b[0;31m# pylint: enable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6899\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/six.py\u001b[0m in \u001b[0;36mraise_from\u001b[0;34m(value, from_value)\u001b[0m\n",
+            "\u001b[0;31mInvalidArgumentError\u001b[0m: In[0] mismatch In[1] shape: 2 vs. 3: [3,2] [3,2] 0 0 [Op:MatMul]"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Pq4rgAPc9L3"
+      },
+      "source": [
+        "\n",
+        "***Resources***\n",
+        "\n",
+        "Info and example of matrix multiplication [https://www.mathsisfun.com/algebra/matrix-multiplying.html](https://www.mathsisfun.com/algebra/matrix-multiplying.html)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3pKJUu_DdlOW"
+      },
+      "source": [
+        ""
       ]
     }
   ]
