22. Matrix Multiplications - Part 1

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMjSsbztHvFGKAbCaMgJxty"
+      "authorship_tag": "ABX9TyMSh67i4TIW3RylRd0UV1tJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -1653,18 +1653,18 @@
         "\n",
         "There are two rules our tensors(or matrices) need to fulfill if we're going to matrix multiply them :\n",
         " 1. The inner dimension must match\n",
-        " 2. The resulting matrix has the shape of inner dimensions.\n",
+        " 2. The resulting matrix has the shape of outer dimensions.\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eGFl49NsT5-L",
-        "outputId": "ef858718-5009-451c-d86e-7336ff513f58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eGFl49NsT5-L",
+        "outputId": "ef858718-5009-451c-d86e-7336ff513f58"
       },
       "source": [
         "# Matrix multiplication  in tensorflow\n",
@@ -1701,11 +1701,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GOSLFkBhb0PT",
-        "outputId": "78096b95-fbbb-4ff6-9199-9249d33dbfd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GOSLFkBhb0PT",
+        "outputId": "78096b95-fbbb-4ff6-9199-9249d33dbfd4"
       },
       "source": [
         "tensor * tensor # Element wise"
@@ -1731,11 +1731,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nd6vungkcEUx",
-        "outputId": "6ccb8a86-cc7a-495c-8aeb-f5ceaaa4590a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nd6vungkcEUx",
+        "outputId": "6ccb8a86-cc7a-495c-8aeb-f5ceaaa4590a"
       },
       "source": [
         "# Matrix multiplication with Python operator \"@\"\n",
@@ -1763,11 +1763,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zHuMqEwXcNz_",
-        "outputId": "bf1b0744-48ab-42db-f926-1af133be91ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zHuMqEwXcNz_",
+        "outputId": "bf1b0744-48ab-42db-f926-1af133be91ef"
       },
       "source": [
         "#Create a tensor of (3,2) tensor\n",
@@ -1805,35 +1805,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q0YMJ_kccrKb",
-        "outputId": "ebe06551-9fe9-4654-fc0d-ee7c31431224",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 255
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q0YMJ_kccrKb",
+        "outputId": "6992a1f7-c55c-48a7-d035-b4dc0decfc49"
       },
       "source": [
         "#Try to matrix multiply of same shape\n",
         "\n",
-        "tf.matmul(X, Y)"
+        "#Uncomment here\n",
+        "#tf.matmul(X, Y)\n",
+        "\n",
+        "tf.matmul(X, tf.transpose(Y))"
       ],
-      "execution_count": 76,
+      "execution_count": 78,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "InvalidArgumentError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-76-2832be79a0ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Try to matrix multiply of same shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/util/dispatch.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[0;34m\"\"\"Call target, and fall back on dispatchers if there is a TypeError.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m       \u001b[0;31m# Note: convert_to_eager_tensor currently raises a ValueError, not a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/math_ops.py\u001b[0m in \u001b[0;36mmatmul\u001b[0;34m(a, b, transpose_a, transpose_b, adjoint_a, adjoint_b, a_is_sparse, b_is_sparse, name)\u001b[0m\n\u001b[1;32m   3488\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3489\u001b[0m       return gen_math_ops.mat_mul(\n\u001b[0;32m-> 3490\u001b[0;31m           a, b, transpose_a=transpose_a, transpose_b=transpose_b, name=name)\n\u001b[0m\u001b[1;32m   3491\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3492\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/gen_math_ops.py\u001b[0m in \u001b[0;36mmat_mul\u001b[0;34m(a, b, transpose_a, transpose_b, name)\u001b[0m\n\u001b[1;32m   5698\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0m_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5699\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5700\u001b[0;31m       \u001b[0m_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from_not_ok_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5701\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_FallbackException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5702\u001b[0m       \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   6895\u001b[0m   \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\" name: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6896\u001b[0m   \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6897\u001b[0;31m   \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_status_to_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6898\u001b[0m   \u001b[0;31m# pylint: enable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6899\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/six.py\u001b[0m in \u001b[0;36mraise_from\u001b[0;34m(value, from_value)\u001b[0m\n",
-            "\u001b[0;31mInvalidArgumentError\u001b[0m: In[0] mismatch In[1] shape: 2 vs. 3: [3,2] [3,2] 0 0 [Op:MatMul]"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 23,  29,  35],\n",
+              "       [ 53,  67,  81],\n",
+              "       [ 83, 105, 127]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
         }
       ]
     },
