--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSh67i4TIW3RylRd0UV1tJ"
+      "authorship_tag": "ABX9TyPxvfZZ4KG8BtxEzFhcmw83"
     },
     "kernelspec": {
       "name": "python3",
@@ -1816,8 +1816,7 @@
         "\n",
         "#Uncomment here\n",
         "#tf.matmul(X, Y)\n",
-        "\n",
-        "tf.matmul(X, tf.transpose(Y))"
+        "\n"
       ],
       "execution_count": 78,
       "outputs": [
@@ -1835,6 +1834,234 @@
             "tags": []
           },
           "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Wze7K3rgpXM",
+        "outputId": "1c165396-bae2-432b-fc60-6ae3c43e745b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Let's change the shape of Y\n",
+        "\n",
+        "tf.reshape(Y, shape = (2, 3))"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 27,  30,  33],\n",
+              "       [ 61,  68,  75],\n",
+              "       [ 95, 106, 117]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DSq_kDwehA0V",
+        "outputId": "8d4796c2-a73d-4b60-d756-c83ef03db8fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X.shape, tf.reshape(Y, shape=(2, 3)).shape"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([3, 2]), TensorShape([2, 3]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "csalMl7Cg6_y"
+      },
+      "source": [
+        "# Try to matrix multiply by reshaped Y\n",
+        "X @ tf.reshape(Y, shape = (2, 3))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "chukwVzUrJ6d",
+        "outputId": "4e176c5f-de95-44db-c712-79003f448d04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Try to matrix multiply by reshaped Y\n",
+        "tf.matmul(X, tf.reshape(Y, shape = (2, 3)))"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 27,  30,  33],\n",
+              "       [ 61,  68,  75],\n",
+              "       [ 95, 106, 117]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ljMA4EpQrkag",
+        "outputId": "e53d2dac-ae82-4864-a75c-24729899cb29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.reshape(X, shape=(2, 3)).shape, Y.shape"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([2, 3]), TensorShape([3, 2]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oGvt_O4irTd2",
+        "outputId": "bfed2941-ac12-40dc-d53f-7bdff791c68c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.matmul(tf.reshape(X, shape=(2, 3)), Y)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[ 58,  64],\n",
+              "       [139, 154]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pjct-yAOrzJG",
+        "outputId": "f5de3c03-40f0-426c-f224-cfc0c661b735",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Can do the same with transpose\n",
+        "tf.transpose(X), tf.reshape(X, shape=(2,3))"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+              " array([[1, 3, 5],\n",
+              "        [2, 4, 6]], dtype=int32)>,\n",
+              " <tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+              " array([[1, 2, 3],\n",
+              "        [4, 5, 6]], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MH4wftdMsSvr",
+        "outputId": "eb03ddea-d325-436a-c3b7-0377dbb0fabe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# try MM with transpose rather than reshape\n",
+        "tf.matmul(tf.transpose(X), Y)"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[ 89,  98],\n",
+              "       [116, 128]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
         }
       ]
     },
